--- a/Menu.html
+++ b/Menu.html
@@ -654,8 +654,10 @@
 
       // Store hours highlighting
       const boxes = document.querySelectorAll(".storehour-box");
-      const today = new Date().getDay();
-      if (boxes[today]) boxes[today].classList.add("active");
+      const now = new Date();
+      now.setHours(now.getHours() - 24);
+      const today = now.getDay();
+      boxes[today]?.classList.add("active");
     });
   </script>
 </body>
