--- a/Menu.html
+++ b/Menu.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: *;">  <!--Github's security for iframes-->
   <title>Main Menu</title>
 </head>
 
@@ -649,7 +650,7 @@
 
     document.addEventListener("DOMContentLoaded", () => {
       // Load default page on startup
-      loadPage('menu_info.html');
+      loadPage('Menu_info.html');
 
       // Set up button click handlers
       const buttons = document.querySelectorAll('.sidebar button');
