--- a/Menu.html
+++ b/Menu.html
@@ -587,15 +587,15 @@
     <span class="horizontal-line"></span>
     <div class="nav-container">
       <div class="sidebar">
-        <button onclick="loadPage('Menu_info.html#special')">Chef's Special</button>
-        <button onclick="loadPage('Menu_info.html#hot')">Hot Drinks</button>
-        <button onclick="loadPage('Menu_info.html#cold')">Cold Drinks</button>
-        <button onclick="loadPage('Menu_info.html#frappe')">Frappe</button>
-        <button onclick="loadPage('Menu_info.html#milkshake')">Milkshake</button>
-        <button onclick="loadPage('Menu_info.html#appetizer')">Appetizers</button>
-        <button onclick="loadPage('Menu_info.html#entree')">Entrees</button>
-        <button onclick="loadPage('Menu_info.html#PiznSan')">Pizza & Sandwich</button>
-        <button onclick="loadPage('Menu_info.html#dessert')">Dessert</button>
+        <button onclick="loadPage('menu_info.html#special')">Chef's Special</button>
+        <button onclick="loadPage('menu_info.html#hot')">Hot Drinks</button>
+        <button onclick="loadPage('menu_info.html#cold')">Cold Drinks</button>
+        <button onclick="loadPage('menu_info.html#frappe')">Frappe</button>
+        <button onclick="loadPage('menu_info.html#milkshake')">Milkshake</button>
+        <button onclick="loadPage('menu_info.html#appetizer')">Appetizers</button>
+        <button onclick="loadPage('menu_info.html#entree')">Entrees</button>
+        <button onclick="loadPage('menu_info.html#PiznSan')">Pizza & Sandwich</button>
+        <button onclick="loadPage('menu_info.html#dessert')">Dessert</button>
       </div>
 
       <div class="content">
@@ -655,7 +655,7 @@
     document.addEventListener("DOMContentLoaded", () => {
       // Load default page on startup with absolute path
       const repoName = 'nano-cafe'; 
-      const defaultPage = `/${repoName}/Menu_info.html`;
+      const defaultPage = `/${repoName}/menu_info.html`;
       document.getElementById("contentFrame").src = defaultPage;
 
       // Set up button click handlers
