--- a/Menu.html
+++ b/Menu.html
@@ -476,211 +476,264 @@
 </style>
 
 <body>
+  <script src="script.js"></script>
 
-  <header class="header">
-    <div class="header-container">
-      <div class="header-left">
-        <img src="Nano-Logo.png" alt="Logo" class="logo" />
-        <p id="side-title">Nano Café</p>
-      </div>
-
-      <button class="menu-toggle" aria-label="Toggle menu" id="menuToggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-
-      <nav class="header-center" id="mainNav">
-        <a href="index.html">Home</a>
-        <a href="Menu.html">Menu</a>
-        <a href="contact&info.html">About Us</a>
-      </nav>
-
-      <div class="header-right">
-        <div class="cart">
-          <img src="Cart_img.png" alt="Cart Icon" class="cart-icon">
-          <span class="cart-text">Your Cart</span>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header-container">
+        <div class="header-left">
+          <img src="Nano-Logo.png" alt="Logo" class="logo" />
+          <p id="side-title">Nano Café</p>
         </div>
-      </div>
-    </div>
-  </header>
 
-  <div class="overlay" id="cartOverlay">
-    <div class="overlay-content">
-      <span class="back-arrow" id="close-cart">=></span>
-      <h2>Your Cart</h2>
-      <div class="cart-items">
-      </div>
+        <!-- Updated Hamburger Menu -->
+        <button class="menu-toggle" aria-label="Toggle menu" id="menuToggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-      <div class="cart-total">
-        <hr>
-        <p>Total: ₱0.00</p>
-      </div>
+        <nav class="header-center" id="mainNav">
+          <a href="index.html">Home</a>
+          <a href="Menu.html">Menu</a>
+          <a href="contact&info.html">About Us</a>
+        </nav>
 
-      <div class="cart-location">
-        <label for="location">Location:</label>
-        <select id="location">
-          <option value="0">-- Select Location --</option>
-          <option value="100">Candelaria - ₱100</option>
-          <option value="75">Sariaya - ₱75</option>
-          <option value="80">Tayabas - ₱80</option>
-          <option value="100">Lucban - ₱100</option>
-          <option value="75">Pagbilao - ₱75</option>
-          <option value="50">Lucena - ₱50</option>
-        </select>
-
-        <div class="grand-total">
-          <div class="delivery-fee">Delivery Fee: ₱0.00</div>
-          <div class="cart-grand-total">GRAND TOTAL: ₱0.00</div>
-          <div class="submit-btn">Order Now!</div>
-        </div>
-      </div>
-      <div class="receipts-wrapper">
-        <div class="receipts-header">
-          <h3>Receipts</h3>
-        </div>
-        <div id="receipts" class="receipts">
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="main-container">
-    <div class="storehours-wrapper">
-      <div class="storehour-box">
-        <h3>Monday</h3>
-        <p>10:00 AM – 10:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Tuesday</h3>
-        <p>10:00 AM – 10:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Wednesday</h3>
-        <p>10:00 AM – 10:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Thursday</h3>
-        <p>10:00 AM – 10:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Friday</h3>
-        <p>10:00 AM – 10:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Saturday</h3>
-        <p>10:00 AM – 11:00 PM</p>
-      </div>
-
-      <div class="storehour-box">
-        <h3>Sunday</h3>
-        <p>10:00 AM – 11:00 PM</p>
-      </div>
-    </div>
-
-    <span class="horizontal-line"></span>
-    <div class="nav-container">
-      <div class="sidebar">
-        <button onclick="loadPage('Menu_info.html#special')">Chef's Special</button>
-        <button onclick="loadPage('Menu_info.html#hot')">Hot Drinks</button>
-        <button onclick="loadPage('Menu_info.html#cold')">Cold Drinks</button>
-        <button onclick="loadPage('Menu_info.html#frappe')">Frappe</button>
-        <button onclick="loadPage('Menu_info.html#milkshake')">Milkshake</button>
-        <button onclick="loadPage('Menu_info.html#appetizer')">Appetizers</button>
-        <button onclick="loadPage('Menu_info.html#entree')">Entrees</button>
-        <button onclick="loadPage('Menu_info.html#PiznSan')">Pizza & Sandwich</button>
-        <button onclick="loadPage('Menu_info.html#dessert')">Dessert</button>
-      </div>
-
-      <div class="content">
-        <iframe id="contentFrame" src="Menu_info.html" class="menu-frame"></iframe>
-      </div>
-    </div>
-  </div>
-  <footer class="site-footer" id="footer">
-    <div class="footer-container">
-      <div class="footer-column">
-        <h2>Nano Cafe</h2>
-        <p>Where all your caffeine cravings and sweet tooth options meet your taste buds~</p>
-      </div>
-
-      <div class="footer-column contact-section">
-        <h2>Contact Info</h2>
-        <div class="contact-columns">
-          <div class="contact-left">
-            <p>Phone: (042) 785 5611</p>
-            <p>Email: nanocafeph@gmail.com</p>
+        <div class="header-right">
+          <div class="cart">
+            <img src="Cart_img.png" alt="Cart Icon" class="cart-icon">
+            <span class="cart-text">Your Cart</span>
           </div>
-          <p>Address: Starmax Building unit 4,Jasmin Street, 4301 Lucena</p>
+        </div>
+      </div>
+    </header>
+
+    <div class="overlay" id="cartOverlay">
+      <div class="overlay-content">
+        <span class="back-arrow" id="close-cart">=></span>
+        <h2>Your Cart</h2>
+        <div class="cart-items">
+        </div>
+
+        <div class="cart-total">
+          <hr>
+          <p>Total: ₱0.00</p>
+        </div>
+
+        <div class="cart-location">
+          <label for="location">Location:</label>
+          <select id="location">
+            <option value="0">-- Select Location --</option>
+            <option value="100">Candelaria - ₱100</option>
+            <option value="75">Sariaya - ₱75</option>
+            <option value="80">Tayabas - ₱80</option>
+            <option value="100">Lucban - ₱100</option>
+            <option value="75">Pagbilao - ₱75</option>
+            <option value="50">Lucena - ₱50</option>
+          </select>
+
+          <div class="grand-total">
+            <div class="delivery-fee">Delivery Fee: ₱0.00</div>
+            <div class="cart-grand-total">GRAND TOTAL: ₱0.00</div>
+            <div class="submit-btn">Order Now!</div>
+          </div>
+        </div>
+        <div class="receipts-wrapper">
+          <div class="receipts-header">
+            <h3>Receipts</h3>
+          </div>
+          <div id="receipts" class="receipts">
+            <!-- JS will inject receipt entries here -->
+          </div>
         </div>
       </div>
     </div>
-    <div style="color:#1b130c9d; border-top: 1px solid #38291c67; padding-top: 10px;">
-      <p>© 2025 Nano Cafe. All Rights Reserved.</p>
+
+
+    <div class="main-container">
+      <div class="storehours-wrapper">
+        <div class="storehour-box">
+          <h3>Monday</h3>
+          <p>10:00 AM – 10:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Tuesday</h3>
+          <p>10:00 AM – 10:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Wednesday</h3>
+          <p>10:00 AM – 10:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Thursday</h3>
+          <p>10:00 AM – 10:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Friday</h3>
+          <p>10:00 AM – 10:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Saturday</h3>
+          <p>10:00 AM – 11:00 PM</p>
+        </div>
+
+        <div class="storehour-box">
+          <h3>Sunday</h3>
+          <p>10:00 AM – 11:00 PM</p>
+        </div>
+      </div>
+
+      <span class="horizontal-line"></span>
+      <div class="nav-container">
+        <div class="sidebar">
+          <button onclick="loadPage('Menu_info.html#special')">Chef's Special</button>
+          <button onclick="loadPage('Menu_info.html#hot')">Hot Drinks</button>
+          <button onclick="loadPage('Menu_info.html#cold')">Cold Drinks</button>
+          <button onclick="loadPage('Menu_info.html#frappe')">Frappe</button>
+          <button onclick="loadPage('Menu_info.html#milkshake')">Milkshake</button>
+          <button onclick="loadPage('Menu_info.html#appetizer')">Appetizers</button>
+          <button onclick="loadPage('Menu_info.html#entree')">Entrees</button>
+          <button onclick="loadPage('Menu_info.html#PiznSan')">Pizza & Sandwich</button>
+          <button onclick="loadPage('Menu_info.html#dessert')">Dessert</button>
+        </div>
+
+        <div class="content">
+          <iframe id="contentFrame" src="Menu_info.html" class="menu-frame"></iframe>
+        </div>
+      </div>
     </div>
-  </footer>
+    <footer class="site-footer" id="footer">
+      <div class="footer-container">
+        <div class="footer-column">
+          <h2>Nano Cafe</h2>
+          <p>Where all your caffeine cravings and sweet tooth options meet your taste buds~</p>
+        </div>
 
-  <script>
-    const BASE_URL = window.location.hostname === 'localhost' ? '' : '/nano_cafe';
+        <div class="footer-column contact-section">
+          <h2>Contact Info</h2>
+          <div class="contact-columns">
+            <div class="contact-left">
+              <p>Phone: (042) 785 5611</p>
+              <p>Email: nanocafeph@gmail.com</p>
+            </div>
+            <p>Address: Starmax Building unit 4,Jasmin Street, 4301 Lucena</p>
+          </div>
+        </div>
+      </div>
+      <div style="color:#1b130c9d; border-top: 1px solid #38291c67; padding-top: 10px;">
+        <p>© 2025 Nano Cafe. All Rights Reserved.</p>
+      </div>
+    </footer>
 
-    function loadPage(page) {
-      const frame = document.getElementById("contentFrame");
-      frame.src = BASE_URL + page;
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        console.log('=== CART DEBUG ===');
 
-      // Update active button
-      const buttons = document.querySelectorAll('.sidebar button');
-      buttons.forEach(btn => {
-        btn.classList.remove('active');
-        if (btn.getAttribute('onclick')?.includes(page)) {
-          btn.classList.add('active');
+        // Check if cart elements exist
+        const cart = document.querySelector('.cart');
+        const overlay = document.getElementById('cartOverlay');
+        const cartItems = document.querySelector('.cart-items');
+
+        console.log('Cart element:', cart);
+        console.log('Overlay element:', overlay);
+        console.log('Cart items element:', cartItems);
+
+        // Check if cart is visible and clickable
+        if (cart) {
+          console.log('Cart styles:', window.getComputedStyle(cart));
+          console.log('Cart position:', cart.getBoundingClientRect());
+
+          // Test click manually
+          cart.addEventListener('click', function (e) {
+            e.stopPropagation();
+            console.log('Cart was clicked!');
+
+            if (overlay) {
+              overlay.classList.add('active');
+              console.log('Overlay should be visible now');
+            } else {
+              console.log('No overlay found to open');
+            }
+          });
+        } else {
+          console.log('NO CART ELEMENT FOUND');
         }
-      });
-    }
-    // iframe loader
-    function loadPage(page) {
-      const frame = document.getElementById("contentFrame");
-      frame.src = page;
 
-      // Update active button
-      const buttons = document.querySelectorAll('.sidebar button');
-      buttons.forEach(btn => {
-        btn.classList.remove('active');
-        if (btn.getAttribute('onclick')?.includes(page)) {
-          btn.classList.add('active');
+        // Check if initCartSystem is being called
+        console.log('initCartSystem function exists:', typeof initCartSystem);
+
+        // Manually try to initialize cart
+        if (typeof initCartSystem === 'function') {
+          console.log('Calling initCartSystem...');
+          initCartSystem();
         }
+
+        console.log('=== END DEBUG ===');
       });
-    }
+      document.addEventListener("DOMContentLoaded", () => {
+        console.log('Cart element:', document.querySelector('.cart'));
+        console.log('Overlay element:', document.getElementById('cartOverlay'));
+        console.log('Cart items element:', document.querySelector('.cart-items'));
+      });
+      const BASE_URL = window.location.hostname === 'localhost' ? '' : '/nano_cafe';
 
-    document.addEventListener("DOMContentLoaded", () => {
-      // default page
-      loadPage('Menu_info.html#special');
+      function loadPage(page) {
+        const frame = document.getElementById("contentFrame");
+        frame.src = BASE_URL + page;
 
-      // Button handlers
-      const buttons = document.querySelectorAll('.sidebar button');
-      buttons.forEach(btn => {
-        btn.addEventListener('click', function () {
-          buttons.forEach(b => b.classList.remove('active'));
-          this.classList.add('active');
+        // Update active button
+        const buttons = document.querySelectorAll('.sidebar button');
+        buttons.forEach(btn => {
+          btn.classList.remove('active');
+          if (btn.getAttribute('onclick')?.includes(page)) {
+            btn.classList.add('active');
+          }
         });
+      }
+      // iframe loader
+      function loadPage(page) {
+        const frame = document.getElementById("contentFrame");
+        frame.src = page;
+
+        // Update active button
+        const buttons = document.querySelectorAll('.sidebar button');
+        buttons.forEach(btn => {
+          btn.classList.remove('active');
+          if (btn.getAttribute('onclick')?.includes(page)) {
+            btn.classList.add('active');
+          }
+        });
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        // default page
+        loadPage('Menu_info.html#special');
+
+        // Button handlers
+        const buttons = document.querySelectorAll('.sidebar button');
+        buttons.forEach(btn => {
+          btn.addEventListener('click', function () {
+            buttons.forEach(b => b.classList.remove('active'));
+            this.classList.add('active');
+          });
+        });
+
+        // Store hours highlighting
+        const boxes = document.querySelectorAll(".storehour-box");
+        const now = new Date();
+        now.setHours(now.getHours() - 24);
+        const today = now.getDay();
+        boxes[today]?.classList.add("active");
+
+        // Initialize cart
+        initCartSystem();
       });
-
-      // Store hours highlighting
-      const boxes = document.querySelectorAll(".storehour-box");
-      const now = new Date();
-      now.setHours(now.getHours() - 24);
-      const today = now.getDay();
-      boxes[today]?.classList.add("active");
-
-      // Initialize cart
-      initCartSystem();
-    });
-  </script>
+    </script>
 
 </body>
 
